--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,49 @@
-.App {
-  text-align: center;
+:root {
+    --gray-border: #ececec;
+    --gray-text-color: #7E7E7E;
+    --green-light-color: #3BB77E;
+}
+@font-face {
+    font-family: "lato-light";
+    src: url("assets/fonts/Lato-Regular.ttf");
+}
+@font-face {
+    font-family: "lato-bold";
+    src: url("assets/fonts/Lato-Black.ttf");
+}
+@font-face {
+    font-family: "qicksand-bold";
+    src: url("assets/fonts/Quicksand-Bold.ttf");
+}
+@font-face {
+    font-family: "qicksand-medium";
+    src: url("assets/fonts/Quicksand-Medium.ttf");
+}
+* {
+    scroll-behavior: smooth;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+    display: flex;
+    width: 100vw;
+    height: auto;
+    overflow-x: hidden;
+    flex-direction: column;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.site-wrapper {
+    display: flex;
+    width: 100%;
+    height: auto;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+a {
+    text-decoration: none;
 }
