--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -149,6 +149,14 @@
     height: 55px;
 }
 
+.menu {
+    display: none;
+    width: 30px;
+    height: 30px;
+    opacity: 0.8;
+    cursor: pointer;
+}
+
 .header-search-box {
     display: flex;
     width: 700px;
@@ -214,7 +222,10 @@
     cursor: pointer;
     transition: margin-bottom 0.3s ease;
     box-shadow: 0 0 5px var(--gray-border);
+    white-space: nowrap;
+    padding: 0 20px;
 }
+
 .location-wrapper:hover {
     margin-bottom: 10px;
 }
@@ -270,45 +281,54 @@
     right: -10px;
     flex-direction: column;
 }
+
 .cart-dropdown-activation:hover > .cart-dropdown-container {
-    display: flex!important;
+    display: flex !important;
 }
+
 .goods-container {
     display: flex;
     width: 100%;
     height: auto;
     gap: 15px;
-    cursor: default!important;
+    cursor: default !important;
 }
+
 .goods-container:nth-child(2) {
     border-bottom: 1px solid var(--gray-border);
     padding-bottom: 30px;
 
 }
+
 .goods-container > img {
     width: 80px;
     height: 80px;
     object-fit: cover;
     object-position: center;
 }
+
 .goods-title {
     display: flex;
     flex-direction: column;
     position: relative;
     font-family: qicksand-medium, sans-serif;
 }
+
 .goods-title > p {
     font-size: 14px;
     line-height: 25px;
     transition: color 0.3s ease;
 }
+
 .goods-title > p:nth-child(1) {
     color: var(--green-light-color);
     cursor: pointer;
 }
+
 .goods-title > p:nth-child(1):hover {
     color: black;
 }
+
 .close-mark {
     width: 10px;
     height: 10px;
@@ -319,35 +339,43 @@
     cursor: pointer;
     transition: scale 0.5s ease;
 }
+
 .close-mark:hover {
     scale: 1.2;
 }
+
 .cart-dropdown-activation:hover .cart-dropdown-container {
     display: flex;
 }
+
 .goods-price-block {
     display: flex;
     width: 100%;
     height: auto;
     justify-content: space-between;
 }
+
 .goods-price-block > p {
     font-size: 16px;
     font-family: qicksand-bold, sans-serif;
 
 }
+
 .goods-price-block > p:nth-child(1) {
     color: var(--gray-text-color);
 }
+
 .goods-price-block > p:nth-child(2) {
     color: var(--green-light-color);
 }
+
 .goods-buttons-block {
     display: flex;
     width: 100%;
     justify-content: space-between;
     align-items: center;
 }
+
 .goods-buttons-block > button {
     width: 100px;
     height: 40px;
@@ -357,14 +385,17 @@
     border: 2px solid var(--green-light-color);
     border-radius: 5px;
 }
+
 .goods-buttons-block > button:nth-child(1) {
     background: white;
     color: var(--green-light-color);
 }
+
 .goods-buttons-block > button:nth-child(2) {
     background: var(--green-light-color);
     color: white;
 }
+
 .goods-buttons-block > button:hover {
     background: #FDC040;
     color: white;
@@ -435,19 +466,22 @@
     font-size: 14px;
     color: #253D4E;
     transition: color 0.3s ease;
-    font-family: Lato-regular,sans-serif;
+    font-family: Lato-regular, sans-serif;
 }
+
 .account-dropdown-content > p:hover {
     color: var(--green-light-color);
 }
 
-.account-dropdown-content >img {
+.account-dropdown-content > img {
     width: 15px;
     height: 15px;
 }
+
 .account-dropdown:hover .account-dropdown-item {
     display: flex;
 }
+
 .header-bottom-container {
     display: flex;
     width: 100%;
@@ -457,12 +491,14 @@
     justify-content: space-between;
     border-bottom: 1px solid var(--gray-border);
 }
+
 .navigation-container {
     display: flex;
     align-items: center;
     justify-content: space-between;
     gap: 40px;
 }
+
 .nav-categories-button {
     display: flex;
     align-items: center;
@@ -472,22 +508,32 @@
     gap: 10px;
     border-radius: 5px;
     cursor: pointer;
+    transition: background-color 0.3s ease;
 }
+
+.nav-categories-button:hover {
+    background: #329b6c;
+}
+
 .nav-categories-button > img {
     width: 15px;
     height: 15px;
     filter: invert();
 }
+
 .nav-categories-button > a {
     color: white;
     font-family: qicksand-bold, sans-serif;
 }
+
 .navigation-items {
     display: flex;
     width: auto;
     height: auto;
     gap: 30px;
+    flex-wrap: wrap;
 }
+
 .navigation-item {
     display: flex;
     align-items: center;
@@ -496,44 +542,136 @@
     cursor: pointer;
     padding: 5px;
 }
-.navigation-item >img:nth-child(1) {
+
+.navigation-item > img:nth-child(1) {
     height: 22px;
     width: 22px;
 }
-.navigation-item >img:nth-child(2) {
+
+.navigation-item > img:nth-child(2) {
     height: 12px;
     width: 12px;
 }
+
 .navigation-item > a {
     font-size: 16px;
     font-family: qicksand-bold, sans-serif;
     transition: color 0.3s ease;
 }
+
 .navigation-item > a:hover {
     color: var(--green-light-color);
 }
+
 .support-container {
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 10px;
 }
+
 .support-container > img {
     width: 35px;
     height: 35px;
 }
+
 .support-title {
     display: flex;
     flex-direction: column;
 }
+
 .support-title > p {
     font-family: qicksand-bold, sans-serif;
     color: var(--green-light-color);
     font-size: 26px;
 }
+
 .support-title > span {
     color: var(--gray-text-color);
     font-size: 12px;
-    font-family: Lato-regular,sans-serif;
+    font-family: Lato-regular, sans-serif;
     letter-spacing: 1px;
+}
+
+@media only screen and (max-width: 1500px) {
+    .location-wrapper {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 1350px) {
+    .location-wrapper {
+        display: none;
+    }
+
+    .header-marquee-block > marquee {
+        display: none;
+    }
+
+    .header-actions-wrapper {
+        flex-direction: column;
+        align-items: start;
+        gap: 10px;
+    }
+}
+
+@media only screen and (max-width: 1030px) {
+    .header-top-container {
+        flex-direction: column;
+        padding: 10px 0;
+        height: auto;
+        gap: 10px;
+    }
+
+    .header-actions-wrapper {
+        display: none;
+    }
+
+    .support-container {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 925px) {
+    .header-search-box {
+        display: none;
+    }
+
+    .menu {
+        display: flex;
+    }
+
+    .header-actions-wrapper {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .action-item:nth-child(1) {
+        display: none;
+    }
+
+    .action-item:nth-child(4) {
+        display: none;
+    }
+
+    .header-middle-container {
+        padding: 10px 150px;
+    }
+
+    .header-bottom-container {
+        display: none;
+    }
+
+}
+
+@media only screen and (max-width: 800px) {
+    .header-middle-container {
+        padding: 10px 50px;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .header-actions-wrapper {
+        display: none;
+    }
 }
