--- a/src/components/main/Main.css
+++ b/src/components/main/Main.css
@@ -54,6 +54,7 @@
     height: auto;
     flex-wrap: wrap;
     gap: 20px;
+    justify-content: center;
 
 
 }
@@ -66,9 +67,8 @@
     flex-direction: column;
     position: relative;
     border: 1px solid var(--gray-border);
-    transition: box-shadow 0.3s ease,border 0.3s ease;
+    transition: box-shadow 0.3s ease, border 0.3s ease;
     border-radius: 20px;
-
 
 
 }
@@ -114,17 +114,21 @@
     top: 0;
     transition: 0.5s;
 }
+
 .img-container > .back-img {
     opacity: 0;
 }
+
 .img-container:hover .back-img {
     opacity: 1;
     z-index: 22;
     scale: 1.05;
 }
+
 .img-container:hover .img-container-buttons {
     display: flex;
 }
+
 .img-container-buttons {
     display: none;
     width: auto;
@@ -136,6 +140,7 @@
     border-radius: 5px;
     border: 1px solid var(--gray-border);
 }
+
 .icon-wrapper {
     display: flex;
     width: 40px;
@@ -145,12 +150,15 @@
     color: var(--green-light-color);
     transition: color 0.3s ease;
 }
+
 .icon-wrapper:nth-child(1) {
     border-right: 1px solid var(--gray-border);
 }
+
 .icon-wrapper:nth-child(3) {
     border-left: 1px solid var(--gray-border);
 }
+
 .icon-wrapper:hover {
     color: orange;
 }
@@ -213,7 +221,8 @@
     gap: 4px;
     font-family: Lato-light, sans-serif;
 }
-.product-store-name>p:nth-child(2):hover {
+
+.product-store-name > p:nth-child(2):hover {
     color: orange;
     cursor: pointer;
 }
@@ -285,4 +294,45 @@
     color: var(--green-light-color);
     transition: color 0.3s ease, bottom 0.3s ease;
     border-radius: 5px;
+}
+
+@media only screen and (max-width: 1350px) {
+    .products-title > h2 {
+        font-size: 25px;
+    }
+
+    .products-nav-items > p {
+        font-size: 14px;
+    }
+
+}
+
+@media only screen and (max-width: 1150px) {
+    .products-navigation {
+        flex-direction: column;
+        align-items: start;
+        gap: 10px;
+        white-space: nowrap;
+    }
+}
+
+@media only screen and (max-width: 800px) {
+    .products-nav-items {
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    .products-navigation {
+        align-items: center;
+        padding: 20px 0;
+        margin-bottom: 10px;
+    }
+
+    .main-wrapper {
+        padding: 10px 20px;
+    }
+
+    .all-products-wrapper {
+        padding: 10px 20px;
+    }
 }
